# memento

./: .env.example  .gitignore  .memento.rules.md  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  NOTICES.md  README.md  demo_memento.py  memento.todo.md  pyproject.toml  update_dependency_tracker.py  update_tasks.py
.claude/: settings.json
.claude-plugin/: .mcp.json  README.md  marketplace.json  plugin.json
.claude-plugin/commands/: help.md  init.md  mine.md  search.md  status.md
.claude-plugin/skills/memento/: SKILL.md
.codex-plugin/: README.md  hooks.json  plugin.json
.codex-plugin/hooks/: mempal-precompact-hook.sh  mempal-session-start-hook.sh  mempal-stop-hook.sh
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: bump-plugin-version.yml  ci.yml  publish.yml
.memento/: migration_report.json  neurograph_memory.db  settings.json
.omc/: notepad.md  project-memory.json
.trae/specs/active-coercion-deterministic/: checklist.md  spec.md  tasks.md
.trae/specs/crystallize-dense-rooms/: checklist.md  spec.md  tasks.md
.trae/specs/dependency-tracker/: checklist.md  spec.md  tasks.md
.trae/specs/enable-adaptive-retrieval-lifecycle/: checklist.md  spec.md  tasks.md
.trae/specs/memento-beyond-memory/: checklist.md  spec.md  tasks.md
.trae/specs/memento-core-refactoring/: checklist.md  spec.md  tasks.md
.trae/specs/memento-hybrid-ui/: checklist.md  spec.md  tasks.md
.trae/specs/persist-goal-enforcer/: checklist.md  spec.md  tasks.md
.trae/specs/precognitive-intervention/: checklist.md  spec.md  tasks.md
assets/: memento-recall-hook.sh  memento-session-start-hook.sh
benchmarks/: e2e_memory_accuracy.py  run_benchmarks.py
docs/superpowers/plans/: 2026-04-10-archive-polish.md  2026-04-10-cognition-engine.md  2026-04-10-crystallize-refinements.md  2026-04-10-defensive-parsing.md  2026-04-10-organic-archive.md  2026-04-10-review-fixes.md  2026-04-10-search-ux.md  2026-04-12-mem0-provider.md  2026-04-13-dynamic-workspace-router-plan.md  2026-04-13-goal-enforcer-persistence.md  2026-04-13-workspace-db-migration-plan.md  2026-04-16-autonomous-memory-engine-vnext-plan.md  2026-04-16-memento-tools-offline-observability-plan.md  2026-04-22-memento-conscientia-plan.md  2026-04-25-memento-update-cli.md  2026-04-25-session-handoff-recovery-plan.md
memento/: __init__.py  __main__.py  access_manager.py  active_coercion.py  active_coercion_hook.py  autonomous.py  cli.py  cognitive_engine.py  config_store.py  consolidation.py  consolidation_scheduler.py  cross_workspace.py  daemon.py  dependency_tracker.py  enforcement_rules.py  federation.py  git_context.py  git_hooks.py  git_ingestion.py  goal_middleware.py  goal_store.py  handoff_prompt.py  kg_extraction.py  kg_extraction_scheduler.py  kg_storage.py  knowledge_graph.py  llm_client.py  local_embeddings.py  math_utils.py  mcp_server.py  migration.py  notifications.py  ontology.py  predictive_cache.py  project_memory_graph.py  project_state.py  provider.py  quality_metrics.py  redaction.py  registry.py  (+7 more)
memento/eval/: datasets.py  metrics.py  runner.py
memento/memory/: active_inference.py  consolidator.py  governor.py  hdc.py  l1_working.py  l2_episodic.py  l3_semantic.py  orchestrator.py  reflector.py  vsa_index.py
memento/migrations/: runner.py
memento/prompts/: check_goal_alignment.json  detect_latent_features.json  kg_extract_triples.json  notification_analysis.json  parse_natural_language_intent.json  registry.py  synthesize_dreams.json
memento/retrieval/: pipeline.py  types.py
memento/retrieval/lanes/: __init__.py  (+4 more)
memento/tools/: __init__.py  autonomy.py  coercion.py  cognitive.py  consolidation.py  core.py  cross_workspace.py  explain.py  goals.py  kg_extraction.py  memory.py  notifications.py  predictive.py  project_memory.py  project_state.py  quality.py  relevance.py  sessions.py  unified.py  unified_extra.py  utils.py  vnext_retrieval.py
mempalace/: hooks_cli.py  knowledge_graph.py
mempalace/integrations/: mem0_provider.py
tests/: conftest.py  mcp_contract_helpers.py  test_access_manager.py  test_active_coercion.py  test_active_coercion_hook.py  test_active_inference.py  test_autonomous.py  test_benchmark.py  test_cli.py  test_coercion_presets.py  test_cognitive_engine.py  test_cognitive_engine_consolidate.py  test_cognitive_engine_reflector.py  test_consolidation.py  test_consolidator.py  test_cross_workspace.py  test_daemon.py  test_dependency_tracker.py  test_dynamic_routing.py  test_enforcement_rules.py  test_git_context.py  test_goal_enforcer_persistence.py  test_goal_store.py  test_goals.py  test_hdc.py  test_kg_extraction.py  test_kg_storage.py  test_l1_working.py  test_l1_working_memory_dump_restore.py  test_llm_client.py  test_local_embeddings.py  test_math_utils.py  test_mcp_auto_checkpoint_policy.py  test_mcp_benchmarks.py  test_mcp_daemon.py  test_mcp_session_event_logging.py  test_mcp_sessions_tools.py  test_mcp_tool_contracts.py  test_memory_governor.py  test_memory_tiers.py  (+26 more)
tests/integrations/: test_mem0_provider.py
(+18 files in other folders)
