[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "memento-mcp"
version = "0.1.0"
authors = [
  { name="Daniele Corrao", email="your.email@example.com" },
]
description = "A local, PageRank-optimized SQLite graph provider for Mem0, powered by Memento architecture."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
]
dependencies = [
    "mem0ai",
    "pytest",
    "pytest-asyncio",
    "mcp",
    "watchdog>=4.0.0",
    "aiosqlite",
    "openai",
]

[project.urls]
"Homepage" = "https://github.com/yourusername/memento"

[project.scripts]
memento-mcp = "memento.mcp_server:main"

[tool.ruff]
exclude = [
    ".memento",
    ".trae",
    "_backup_mempalace",
    "tmp_*.py",
    "tmp_*.md",
    "temp_*.py",
    "temp_*.md",
    "apply_*.py",
    "patch*.py",
    "fix*.py",
    "update_*.py",
]
