[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "memento-mcp"
version = "0.1.0"
authors = [
  { name="Daniele Corrao" },
]
description = "A local, PageRank-optimized SQLite graph provider for Mem0, powered by Memento architecture."
readme = "README.md"
license = { text = "AGPL-3.0" }
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: OS Independent",
]
dependencies = [
    "mcp",
    "watchdog>=4.0.0",
    "aiosqlite",
    "openai",
    "tree-sitter",
    "tree-sitter-python",
    "tree-sitter-javascript",
    "tree-sitter-typescript",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
]

[project.urls]
"Homepage" = "https://github.com/JoyciAkira/memento"

[project.scripts]
memento-mcp = "memento.mcp_server:main"
memento = "memento.cli:main"

[tool.ruff]
exclude = [
    ".memento",
    ".trae",
    "_backup_memento",
    "tmp_*.py",
    "tmp_*.md",
    "temp_*.py",
    "temp_*.md",
    "apply_*.py",
    "patch*.py",
    "fix*.py",
    "update_*.py",
]

[tool.setuptools]
packages = ["memento"]
include-package-data = true

[tool.setuptools.package-data]
memento = ["prompts/*.json"]

[tool.bandit]
exclude_dirs = ["tests", ".memento", ".trae", "_backup_memento", "tmp_*", "temp_*", "apply_*", "patch*", "fix*", "update_*"]
skips = ["B101", "B601", "B608"]

[tool.mypy]
ignore_missing_imports = true
python_version = "3.10"
