[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "memento-mcp"
version = "0.1.0"
authors = [
  { name="Daniele Corrao" },
]
description = "The Autonomous Nervous System for AI Agents — local-first MCP middleware with temporal graph memory, active coercion, and proactive goal alignment."
readme = "README.md"
license = { text = "AGPL-3.0" }
requires-python = ">=3.10"
keywords = ["mcp", "ai-agents", "memory", "graph-database", "sqlite", "coercion", "llm", "knowledge-graph", "model-context-protocol"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Quality Assurance",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: OS Independent",
]
dependencies = [
    "mcp",
    "watchdog>=4.0.0",
    "aiosqlite",
    "openai",
    "tree-sitter",
    "tree-sitter-python",
    "tree-sitter-javascript",
    "tree-sitter-typescript",
]

[project.optional-dependencies]
embeddings = [
    "fastembed>=0.3.0",
]
test = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
]

[project.urls]
"Homepage" = "https://github.com/JoyciAkira/memento"
"Repository" = "https://github.com/JoyciAkira/memento"
"Issues" = "https://github.com/JoyciAkira/memento/issues"

[project.scripts]
memento-mcp = "memento.mcp_server:main"
memento = "memento.cli:main"

[tool.ruff]
exclude = [
    ".memento",
    ".trae",
    "_backup_memento",
    "tmp_*.py",
    "tmp_*.md",
    "temp_*.py",
    "temp_*.md",
    "apply_*.py",
    "patch*.py",
    "fix*.py",
    "update_*.py",
]

[tool.setuptools]
packages = ["memento"]
include-package-data = true

[tool.setuptools.package-data]
memento = ["prompts/*.json"]

[tool.bandit]
exclude_dirs = ["tests", ".memento", ".trae", "_backup_memento", "tmp_*", "temp_*", "apply_*", "patch*", "fix*", "update_*"]
skips = ["B101", "B601", "B608"]

[tool.mypy]
ignore_missing_imports = true
python_version = "3.10"
